Afegir consulta de procediments i tràmits per codiDir3 de la unitat associada al lloc de feina del funcionari dins l'assistent de tràmits #102 #101
