# rfhab-api-interna/openapi/openapi_interna_secure.json
@@ -270,6 +270,24 @@
         "summary" : "Comprobar si un funcionari té permís per realitzar un trámit",
         "operationId" : "Comprobar Autorització",
         "parameters" : [ {
+          "name" : "language",
+          "in" : "query",
+          "description" : "Idioma en que s'han de retornar les dades(Només suportat 'ca' o 'es')",
+          "schema" : {
+            "type" : "string",
+            "default" : "ca"
+          },
+          "examples" : {
+            "Català" : {
+              "description" : "Català",
+              "value" : "ca"
+            },
+            "Castellano" : {
+              "description" : "Castellano",
+              "value" : "es"
+            }
+          }
+        }, {
           "name" : "usuari",
           "in" : "query",
           "description" : "Usuari del funcionari habilitat",
